Add install targets to CMakeLists.txt

--- a/uos_rotunit_driver/CMakeLists.txt
+++ b/uos_rotunit_driver/CMakeLists.txt
@@ -37,3 +37,5 @@ install(TARGETS
   uos_rotunit_driver
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+install(DIRECTORY launch/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+install(DIRECTORY urdf/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/urdf)
