--- a/uos_rotunit_snapshotter/CMakeLists.txt
+++ b/uos_rotunit_snapshotter/CMakeLists.txt
@@ -35,3 +35,4 @@ install(TARGETS
   uos_rotunit_snapshotter
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+install(DIRECTORY launch/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
