--- a/uos_rotunit_teleop/CMakeLists.txt
+++ b/uos_rotunit_teleop/CMakeLists.txt
@@ -32,3 +32,4 @@ install(TARGETS
   uos_rotunit_teleop_ps3joy
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+install(DIRECTORY launch/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
