--- a/uos_rotunit_teleop/package.xml
+++ b/uos_rotunit_teleop/package.xml
@@ -15,6 +15,7 @@
   <build_depend>actionlib</build_depend>
   <build_depend>uos_rotunit_driver</build_depend>
   <build_depend>uos_rotunit_snapshotter</build_depend>
+  <build_depend>rviz</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -23,5 +24,10 @@
   <run_depend>actionlib</run_depend>
   <run_depend>uos_rotunit_driver</run_depend>
   <run_depend>uos_rotunit_snapshotter</run_depend>
+  <run_depend>rviz</run_depend>
+
+  <export>
+    <rviz plugin="${prefix}/rviz_plugin.xml"/>
+  </export>
 
 </package>
