--- a/uos_rotunit_teleop/CMakeLists.txt
+++ b/uos_rotunit_teleop/CMakeLists.txt
@@ -57,3 +57,4 @@ install(TARGETS
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 install(DIRECTORY launch/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+install(FILES rviz_plugin.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
